corrected layout issues

--- a/Oluwatobi.css
+++ b/Oluwatobi.css
@@ -1,7 +1,6 @@
 #head {
     
     font: serif;
-    color: black;
     border-bottom: 10px double white;
     border-left: 10px double white;
     border-right: 10px double white;
@@ -18,28 +17,25 @@
 
 #left {
     float: left;
-    width: 72.93%;
+    width: 72.9%;
     text-align: justify;
-    border-left: 10px double white;
-    border-bottom: 0.1px solid whitesmoke;
-    min-height: 43.7em;
+    min-height: 43.3em;
     
 }
 
 #right {
     text-align: right;
-    border-right: 10px double white;
-    border-left: 0.5px dotted white;
-    border-bottom: 0.1px solid whitesmoke;
+    border-left: 1px dotted white;
     float: left;
     width: 25.5%;
-    min-height: 43.7em;
+    min-height: 43.3em;
 }
 
 #footer {
     text-align: justify;
     border-right: 10px double white;
     border-left: 10px double white;
+    border-top: 10px double white;
     border-bottom: 10px double white;
     float: left;
     width: 98.5%;
@@ -52,6 +48,7 @@ body {
     color:white;
     background-image: url("https://res.cloudinary.com/mangywall/image/upload/v1567097610/back1_mxnnwg.jpg");
     background-repeat: repeat;
+    width: auto;
     
     
 }
@@ -72,22 +69,26 @@ body {
 #sub-heading {
     text-decoration: underline;
     font-family: calibri;
+    color: white;
 }
 
 #text {
     font-size: 15pt;
     font-family: calibri;
+    color: white
 }
 
 .adrress {
     font-size: 13pt;
     font-family: "cursive";
+    color: white;
 
 }
 
 .skills {
     font-size: 13pt;
     font-family: "arial narrow";
+    color: white;
 }
   
 #mytitles {
